# autonomous-exploration-demo-benchmark

./: .dockerignore  .gitignore  README.md  docker.sh  launch.sh
config/frontier_exploration_ros2/: config.yaml  config_nearest.yaml
config/roadmap_explorer/: roadmap_explorer_overrides.yaml
docker/: Dockerfile  entrypoint.sh
exploration_packages/frontier_exploration_ros2/: README.md  package.xml
exploration_packages/frontier_exploration_ros2/config/: params.yaml
exploration_packages/frontier_exploration_ros2/docs/: nearest-legacy-readme-parts.md
exploration_packages/frontier_exploration_ros2/include/frontier_exploration_ros2/: decision_map.hpp  frontier_explorer_core.hpp  frontier_explorer_node.hpp  frontier_policy.hpp  frontier_search.hpp  frontier_types.hpp  mrtsp_ordering.hpp
exploration_packages/frontier_exploration_ros2/include/frontier_exploration_ros2/debug/: debug_analyzer.hpp  debug_markers.hpp
exploration_packages/frontier_exploration_ros2/src/: decision_map.cpp  frontier_explorer_core_detail.hpp  frontier_explorer_core_dispatch.cpp  frontier_explorer_core_frontiers.cpp  frontier_explorer_core_init.cpp  frontier_explorer_core_maps.cpp  frontier_explorer_node.cpp  frontier_policy.cpp  frontier_search.cpp  frontier_suppression.cpp  mrtsp_ordering.cpp
exploration_packages/frontier_exploration_ros2/src/debug/: debug_analyzer.cpp  debug_markers.cpp  debug_observer_node.cpp
exploration_packages/frontier_exploration_ros2/test/: test_control_service_and_idle.cpp  test_decision_map_and_mrtsp.cpp  test_frontier_snapshot_and_search.cpp  test_mrtsp_solver.cpp  test_preemption_flow.cpp
exploration_packages/m-explore-ros2/explore/launch/: explore.launch.py
exploration_packages/m-explore-ros2/map_merge/: CMakeLists.txt  package.xml
exploration_packages/m-explore-ros2/map_merge/config/: params.yaml
exploration_packages/m-explore-ros2/map_merge/include/map_merge/: map_merge.h
exploration_packages/m-explore-ros2/map_merge/src/: map_merge.cpp
exploration_packages/m-explore-ros2/map_merge_py/: package.xml  setup.cfg  setup.py
exploration_packages/m-explore-ros2/map_merge_py/map_merge_py/: explore_map.py  map_merge.py
exploration_packages/nav2_wavefront_frontier_exploration/: README.md  package.xml  setup.cfg  setup.py
exploration_packages/nav2_wavefront_frontier_exploration/nav2_wfd/: wavefront_frontier.py
results/: generate_charts.py
rviz/: CMakeLists.txt  package.xml  rviz_plugin_description.xml
rviz/include/utils/: exploration_control_panel.hpp
rviz/launch/: roadmap_explorer_compat.launch.py
rviz/src/: exploration_control_panel.cpp  frontier_path_tracker.py  frontier_path_tracker.yaml
simulation/Week-7-8-ROS2-Navigation/: README.md
simulation/Week-7-8-ROS2-Navigation/bme_ros2_navigation/: CMakeLists.txt
simulation/Week-7-8-ROS2-Navigation/bme_ros2_navigation/config/: ekf.yaml  navigation.yaml  slam_toolbox_localization.yaml  slam_toolbox_mapping.yaml
simulation/Week-7-8-ROS2-Navigation/bme_ros2_navigation/launch/: localization.launch.py  localization_slam_toolbox.launch.py  mapping.launch.py  navigation.launch.py  navigation_with_slam.launch.py  spawn_robot.launch.py  world.launch.py
simulation/Week-7-8-ROS2-Navigation/bme_ros2_navigation/rviz/: localization.rviz  mapping.rviz  navigation.rviz  rviz.rviz
simulation/Week-7-8-ROS2-Navigation/bme_ros2_navigation/urdf/: mogi_bot.gazebo
simulation/Week-7-8-ROS2-Navigation/bme_ros2_navigation_py/: setup.py
simulation/worlds/bookstore/: bookstore.world
simulation/worlds/bookstore/models/aws_robomaker_retail_ShopWindow_01/: model.sdf
simulation/worlds/corridor/: corridor.world
simulation/worlds/warehouse/: warehouse.sdf
